@@ -1,8 +1,13 @@
 package org.example.main.mapper;
 
 import lombok.experimental.UtilityClass;
+import org.example.main.dto.UserDto;
+import org.example.main.dto.creationDto.RoleCreationDto;
 import org.example.main.dto.RoleDto;
 import org.example.main.entity.Role;
+import org.example.main.entity.User;
+
+import java.util.stream.Collectors;
 
 @UtilityClass
 public class RoleDtoMapper {
@@ -11,7 +16,12 @@ public class RoleDtoMapper {
         return RoleDto.builder()
                 .title(source.getTitle())
                 .id(source.getId())
-                .users(source.getUsers().stream().map(UserDtoMapper::convertEntityToDto).toList())
+                .users(source.getUsers().stream()
+                        .map(user -> UserDto.builder()
+                                .name(user.getName())
+                                .id(user.getId())
+                                .build())
+                        .toList())
                 .build();
     }
 
@@ -19,7 +29,16 @@ public class RoleDtoMapper {
     {
         return Role.builder()
                 .title(source.getTitle())
-                .users(source.getUsers().stream().map(UserDtoMapper::convertDtoToEntity).toList())
+                .users(source.getUsers().stream()
+                        .map(userDto -> User.builder()
+                                .name(userDto.getName())
+                                .id(userDto.getId())
+                                .build())
+                        .collect(Collectors.toList()))
                 .build();
+    }
+
+    public static Role buildEntity(RoleCreationDto source){
+        return Role.builder().title(source.getTitle()).build();
     }
 }
